src/test/fail/function_arg_redecl.lly
#[
SyntaxError: a has already been declared.
Where: File "test/fail/function_arg_redecl.lly" at line 6
]#

define f(a: integer, a: integer) {}
